| Bug #42458 | show global status like 'ndb%' - segv | ||
|---|---|---|---|
| Submitted: | 29 Jan 2009 16:22 | Modified: | 31 Jan 2009 23:59 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | Cluster 6.2 | OS: | Any |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[29 Jan 2009 16:22]
Tomas Ulin
[29 Jan 2009 16:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64521 2803 Tomas Ulin 2009-01-29 Bug #42458 show global status - segv
[29 Jan 2009 16:24]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090129162404-vr19sz9h809563ul) (version source revid:tomas.ulin@sun.com-20090129162404-vr19sz9h809563ul) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[29 Jan 2009 16:30]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:tomas.ulin@sun.com-20090129162742-0it6fawozo5qkoh3) (version source revid:tomas.ulin@sun.com-20090129162742-0it6fawozo5qkoh3) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[29 Jan 2009 16:36]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090129163431-5zg19hkg5eqzv7y3) (version source revid:tomas.ulin@sun.com-20090129163431-5zg19hkg5eqzv7y3) (merge vers: 5.1.31-ndb-6.4.3) (pib:6)
[31 Jan 2009 23:59]
Jon Stephens
Documented bugfix in the NDB-6.2.17, 6.3.22, and 6.4.3 changelogs as follows:
Issuing SHOW GLOBAL STATUS LIKE 'NDB%' before mysqld had
connected to the cluster caused a segmentation fault.
[4 Feb 2009 10:42]
Oli Sennhauser
Get the same with: SELECT variable_value FROM information_schema.session_status WHERE variable_name LIKE 'NDB_EXECUTE_COUNT'; stack_bottom = 0xb488a210 thread_stack 0x30000 mysqld(my_print_stacktrace+0x2d) [0x85cddbd] mysqld(handle_segfault+0x37f) [0x8243e6f] [0xb7f39420] mysqld(ha_ndbcluster::seize_thd_ndb()+0x2d) [0x83dc16d] mysqld(check_ndb_in_thd(THD*, bool)+0x7b) [0x83dc23b] mysqld [0x83dc287] mysqld [0x836ebc7] mysqld(fill_status(THD*, TABLE_LIST*, Item*)+0x9f) [0x836f01f] mysqld(get_schema_tables_result(JOIN*, enum_schema_table_state)+0x1ce) [0x836301e] mysqld(JOIN::exec()+0x455) [0x82c98d5] mysqld(mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*)+0x158) [0x82cbda8] mysqld(handle_select(THD*, st_lex*, select_result*, unsigned long)+0x15d) [0x82cc70d] mysqld [0x824f2c7] mysqld(mysql_execute_command(THD*)+0x6348) [0x8259368] mysqld(mysql_parse(THD*, char const*, unsigned int, char const**)+0x208) [0x825d598] mysqld(dispatch_command(enum_server_command, THD*, char*, unsigned int)+0xf3c) [0x825e4dc] mysqld(do_command(THD*)+0xe1) [0x825ebe1] mysqld(handle_one_connection+0x5e4) [0x824c834] /lib/libpthread.so.0 [0xb7f11fda] /lib/libc.so.6(clone+0x5e) [0xb7d1f92e] Trying to get some variables. Some pointers may be invalid and cause the dump to abort... thd->query at 0x8bd14c8 = SELECT variable_value FROM information_schema.session_status WHERE variable_name LIKE 'NDB_EXECUTE_COUNT' thd->thread_id=4 thd->killed=NOT_KILLED
[10 Feb 2009 20:13]
Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090210194937-s7xshv5l3m1v7wi9) (version source revid:tomas.ulin@sun.com-20090129163531-z8ao7stcp6cjlxz4) (merge vers: 6.0.10-alpha) (pib:6)
