Bug #42458  show global status - segv